plugin/src/test/resources/annotator/perl/unreachableCode/ternaryDieCondition.code
die("some") <error descr="Unreachable code">?</error> "one"<error descr="Unreachable code">:</error> "<error descr="Unreachable code">Two</error>";